--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
   <meta charset="utf-8" />
   <title>SAIRYŌ</title>
-  <base href="/" />
+  <base href="https://iamnavino.github.io/deploy/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.png" />
 
-  <meta property="og:url" content="https://staging.sairyo.org/#/event/65">
+  <!-- <meta property="og:url" content="https://staging.sairyo.org/#/event/65">
   <meta property="og:description" content="Event ">
-  <meta property="og:image" content="https://s3.eu-west-1.amazonaws.com/az.sairyo/RP7z5SVpfXcover.jpg">
+  <meta property="og:image" content="https://s3.eu-west-1.amazonaws.com/az.sairyo/RP7z5SVpfXcover.jpg"> -->
 <link rel="stylesheet" href="styles.363157e4ecb27df37d24.css"></head>
 
 <body>
