--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
 
   <meta charset="utf-8" />
   <title>SAIRYŌ</title>
-  <base href="https://iamnavino.github.io/deploy/" />
+  <base href="https://iamnavino.github.io/deploy-app/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.png" />
 
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:site_name" content="Your Website Name" />
+  <meta property="og:url" content="Your website page URL" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Your Website Page Title" />
+  <meta property="og:description" content="Your Website Page Description" />
+  <meta property="og:image" content="Your Website image" />
+  <meta property="og:image:secure_url" content="Your Website image" />
   <!-- <meta property="og:url" content="https://staging.sairyo.org/#/event/65">
   <meta property="og:description" content="Event ">
   <meta property="og:image" content="https://s3.eu-west-1.amazonaws.com/az.sairyo/RP7z5SVpfXcover.jpg"> -->
-<link rel="stylesheet" href="styles.363157e4ecb27df37d24.css"></head>
+  <link rel="stylesheet" href="styles.363157e4ecb27df37d24.css">
+</head>
 
 <body>
   <app-root></app-root>
@@ -39,6 +49,13 @@
         data-description="Charged after your home is spotless"
       ></script>
     </form> -->
-<script src="runtime-es2015.ab1b1de1405f3ac3e3ac.js" type="module"></script><script src="runtime-es5.ab1b1de1405f3ac3e3ac.js" nomodule defer></script><script src="polyfills-es5.5eb32eda0f11a833644c.js" nomodule defer></script><script src="polyfills-es2015.520279f2b189bd3a3f0c.js" type="module"></script><script src="scripts.166a6712d65c2b9c7149.js" defer></script><script src="main-es2015.ad56a9b7fd376280c25f.js" type="module"></script><script src="main-es5.ad56a9b7fd376280c25f.js" nomodule defer></script></body>
+  <script src="runtime-es2015.ab1b1de1405f3ac3e3ac.js" type="module"></script>
+  <script src="runtime-es5.ab1b1de1405f3ac3e3ac.js" nomodule defer></script>
+  <script src="polyfills-es5.5eb32eda0f11a833644c.js" nomodule defer></script>
+  <script src="polyfills-es2015.520279f2b189bd3a3f0c.js" type="module"></script>
+  <script src="scripts.166a6712d65c2b9c7149.js" defer></script>
+  <script src="main-es2015.fa03daf737357c8e3c94.js" type="module"></script>
+  <script src="main-es5.fa03daf737357c8e3c94.js" nomodule defer></script>
+</body>
 
 </html>
