--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <meta charset="utf-8" />
   <title>SAIRYŌ</title>
-  <base href="https://iamnavino.github.io/deploy-app/" />
+  <base href="https://iamnavino.github.io/deploy/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.png" />
 
